--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<div class="nav-navbar">
 					<div class="navbar-menu">
 						<div class="logo">
-							<a href="#"><img src="/Users/rudy/Documents/projects/1/FinancialMatter/img/logo.png" alt="logo" class="header-logo"></a>
+							<a href="#"><img src="./img/logo.png" alt="logo" class="header-logo"></a>
 						</div>
 						<div class="navbar-toggle">
 							<span></span>
