index.hmtl changes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 </head>
 <body>
 	<header>
@@ -35,7 +36,29 @@
 				</div>
 			</div>
 		</nav>
+		<main>
+			<div class="main-content">
+				<div class="main-bio">
+					<h2>
+						Damian Gałdyński
+					</h2>
+					<p class="profession">
+						Twój doradca finansowy
+					</p>
+				</div>
+			</div>
+		</main>
 	</header>
+	<footer>
+		<div class="social-icons">
+			<a href="https://www.facebook.com/pg/finematter2018/about/?ref=page_internal"><i class="fab fa-facebook fa-2x"></i></a>
+			<a href="https://www.facebook.com/finematter2018/"><i class="fab fa-facebook-messenger fa-2x"></i></a>
+		</div>
+		<div class="copyright">
+			<p>Damian Gałdyński: Twój doradca finansowy</p>
+			<p>© 2015 Company. All right reserved.</p>
+		</div>
+	</footer>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="js/main.js"></script>
 </body>
