index.hmtl changes

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 		</nav>
 		<main>
 			<div class="main-content">
+			<div class="blur"></div>
 				<div class="main-bio">
 					<h2>
 						Damian Gałdyński
@@ -45,18 +46,21 @@
 					<p class="profession">
 						Twój doradca finansowy
 					</p>
+					<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
 				</div>
 			</div>
 		</main>
 	</header>
 	<footer>
-		<div class="social-icons">
-			<a href="https://www.facebook.com/pg/finematter2018/about/?ref=page_internal"><i class="fab fa-facebook fa-2x"></i></a>
-			<a href="https://www.facebook.com/finematter2018/"><i class="fab fa-facebook-messenger fa-2x"></i></a>
-		</div>
-		<div class="copyright">
-			<p>Damian Gałdyński: Twój doradca finansowy</p>
-			<p>© 2015 Company. All right reserved.</p>
+		<div class="footer-info">
+			<div class="social-icons">
+				<a href="https://www.facebook.com/pg/finematter2018/about/?ref=page_internal"><i class="fab fa-facebook fa-2x"></i></a>
+				<a href="https://www.facebook.com/finematter2018/"><i class="fab fa-facebook-messenger fa-2x"></i></a>
+			</div>
+			<div class="copyright">
+				<p>Damian Gałdyński: Twój doradca finansowy</p>
+				<p>© 2015 Company. All right reserved.</p>
+			</div>
 		</div>
 	</footer>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
