--- a/index.html
+++ b/index.html
@@ -36,21 +36,23 @@
 				</div>
 			</div>
 		</nav>
-		<main>
-			<div class="main-content">
+	</header>
+	<main>
+		<div class="main-content">
 			<div class="blur"></div>
 				<div class="main-bio">
-					<h2>
-						Damian Gałdyński
-					</h2>
-					<p class="profession">
-						Twój doradca finansowy
-					</p>
-					<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+					<h2>Damian Gałdyński</h2>
+					<p class="profession">Twój doradca finansowy</p>
+					<ul class="skill-list">
+						<li>lorem ipsum</li>
+						<li>lorem ipsum</li>
+						<li>lorem ipsum</li>
+						<li>lorem ipsum</li>
+						<li>lorem ipsum</li>
+					</ul>
 				</div>
-			</div>
-		</main>
-	</header>
+		</div>
+	</main>
 	<footer>
 		<div class="footer-info">
 			<div class="social-icons">
@@ -59,7 +61,7 @@
 			</div>
 			<div class="copyright">
 				<p>Damian Gałdyński: Twój doradca finansowy</p>
-				<p>© 2015 Company. All right reserved.</p>
+				<p>© 2018 Company. All right reserved.</p>
 			</div>
 		</div>
 	</footer>
