--- a/index.html
+++ b/index.html
@@ -38,20 +38,21 @@
 		</nav>
 	</header>
 	<main>
-		<div class="main-content">
-			<div class="blur"></div>
+		<section id="bio-fnfo">
+			<div class="blur">
 				<div class="main-bio">
 					<h2>Damian Gałdyński</h2>
 					<p class="profession">Twój doradca finansowy</p>
-					<ul class="skill-list">
-						<li>lorem ipsum</li>
-						<li>lorem ipsum</li>
-						<li>lorem ipsum</li>
-						<li>lorem ipsum</li>
-						<li>lorem ipsum</li>
-					</ul>
 				</div>
-		</div>
+			</div>
+		</section>
+		<section id="about">
+			<div class="skills">
+				<p class="skill-list">
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at tristique quam. Aliquam erat volutpat. Curabitur ipsum elit, finibus in tempus at, hendrerit ac turpis. Nullam tincidunt, sem vitae vehicula bibendum, lacus libero rhoncus dui, ut pellentesque ligula purus non nulla. Morbi posuereleo fringilla, efficitur arcu nec, rutrum tortor. In id malesuada ante. Pellentesque consequat ultricies interdum. Vivamus placerat ipsum et iaculis varius.
+				</p>
+			</div>
+		</section>
 	</main>
 	<footer>
 		<div class="footer-info">
