add about.html & offer.html

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -38,20 +38,16 @@
 		</nav>
 	</header>
 	<main>
-		<section id="bio-fnfo">
-			<div class="blur">
-				<div class="main-bio">
-					<h2>Damian Gałdyński</h2>
-					<p class="profession">Twój doradca finansowy</p>
-				</div>
-			</div>
-		</section>
 		<section id="about">
-			<div class="skills">
-				<p class="skill-list">
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at tristique quam. Aliquam erat volutpat. Curabitur ipsum elit, finibus in tempus at, hendrerit ac turpis. Nullam tincidunt, sem vitae vehicula bibendum, lacus libero rhoncus dui, ut pellentesque ligula purus non nulla. Morbi posuereleo fringilla, efficitur arcu nec, rutrum tortor. In id malesuada ante. Pellentesque consequat ultricies interdum. Vivamus placerat ipsum et iaculis varius.
-				</p>
+			<div class="blur">
 			</div>
+			<div class="about-content">
+					<h2>O nas</h2>
+					<p class="about-info">Financial Matter to przedsiębiorstwo o zasięgu ogólnopolskim, które specjalizuje się w zapewnieniu najkorzystniejszego oraz najbardziej komfortowego źródła finansowania.  Siedziba firmy mieści się w Poznaniu, natomiast pełna mobilność oraz dyspozycyjność pozwala nam dotrzeć w każdy zakątek kraju.
+					Firma współpracuje z rzeszą wiodących na polskim rynku instytucji finansowych, co pozwala na dużą wszechstronność, elastyczność oraz realne dopasowanie preferowanych rozwiązań do potrzeb klientów.
+					Przyjęty model działania oraz honorowane przez nas wartości stawiają odbiorców naszych usług na pierwszym miejscu. Każdy z Państwa może liczyć na indywidualne podejście, a także nasze pełne zaangażowanie w proces zaspokajania Państwa potrzeb oraz rozwiązywania problemów. Gramy w jednej drużynie!
+					</p>
+				</div>
 		</section>
 	</main>
 	<footer>
@@ -69,3 +65,4 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="js/main.js"></script>
 </body>
+</html>
