--- a/offer.html
+++ b/offer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -38,19 +38,35 @@
 		</nav>
 	</header>
 	<main>
-		<section id="bio-fnfo">
-			<div class="blur">
-				<div class="main-bio">
-					<h2>Damian Gałdyński</h2>
-					<p class="profession">Twój doradca finansowy</p>
+		<section id="offer">
+			<div class="blur"></div>
+			<div class="offer-content">
+				<h2>Oferta</h2>
+				<div class="offer-info">
+					<div class="offer-info-clients">
+						<p>Klient biznesowy</p>
+						<ul>
+							<li>kredyt firmowy ratalny na dowolny cel</li>
+							<li>kredyt inwestycyjny ratalny na cel określony</li>
+							<li>kredyt w rachunku bieżącym</li>
+							<li>limit w koncie</li>
+							<li>leasing finansowy</li>
+							<li>leasing operacyjny</li>
+							<li>kredyt zabezpieczony</li>
+						</ul>
+					</div>
+					<div class="offer-info-clients">
+						<p>Klient indywidualny</p>
+						<ul>
+							<li>kredyt konsumpcyjny na dowolny cel</li>
+							<li>kredyt samochodowy</li>
+							<li>limit w koncie</li>
+							<li>leasing konsumencki</li>
+							<li>karta kredytowa</li>
+							<li>kredyt zabezpieczony</li>
+						</ul>
+					</div>
 				</div>
-			</div>
-		</section>
-		<section id="about">
-			<div class="skills">
-				<p class="skill-list">
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at tristique quam. Aliquam erat volutpat. Curabitur ipsum elit, finibus in tempus at, hendrerit ac turpis. Nullam tincidunt, sem vitae vehicula bibendum, lacus libero rhoncus dui, ut pellentesque ligula purus non nulla. Morbi posuereleo fringilla, efficitur arcu nec, rutrum tortor. In id malesuada ante. Pellentesque consequat ultricies interdum. Vivamus placerat ipsum et iaculis varius.
-				</p>
 			</div>
 		</section>
 	</main>
@@ -69,3 +85,4 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="js/main.js"></script>
 </body>
+</html>
