add scroll button

--- a/about.html
+++ b/about.html
@@ -38,9 +38,18 @@
 		</nav>
 	</header>
 	<main>
-		<section id="about">
+		<section id="bio-info">
 			<div class="blur">
+				<div class="main-bio">
+					<h2>Damian Gałdyński</h2>
+					<p class="profession">Twój doradca finansowy</p>
+				</div>
+				<div class="scroll-button">
+					<a href="#information"><i class="fas fa-angle-double-down"></i>scroll</a>
+				</div>
 			</div>
+		</section>
+		<section id="information">
 			<div class="about-content">
 					<h2>O nas</h2>
 					<p class="about-info">Financial Matter to przedsiębiorstwo o zasięgu ogólnopolskim, które specjalizuje się w zapewnieniu najkorzystniejszego oraz najbardziej komfortowego źródła finansowania.  Siedziba firmy mieści się w Poznaniu, natomiast pełna mobilność oraz dyspozycyjność pozwala nam dotrzeć w każdy zakątek kraju.
