--- a/index.html
+++ b/index.html
@@ -38,15 +38,18 @@
 		</nav>
 	</header>
 	<main>
-		<section id="bio-fnfo">
+		<section id="bio-info">
 			<div class="blur">
 				<div class="main-bio">
 					<h2>Damian Gałdyński</h2>
 					<p class="profession">Twój doradca finansowy</p>
 				</div>
+				<div class="scroll-button">
+					<a href="#information"><i class="fas fa-angle-double-down"></i>scroll</a>
+				</div>
 			</div>
 		</section>
-		<section id="about">
+		<section id="information">
 			<div class="skills">
 				<p class="skill-list">
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at tristique quam. Aliquam erat volutpat. Curabitur ipsum elit, finibus in tempus at, hendrerit ac turpis. Nullam tincidunt, sem vitae vehicula bibendum, lacus libero rhoncus dui, ut pellentesque ligula purus non nulla. Morbi posuereleo fringilla, efficitur arcu nec, rutrum tortor. In id malesuada ante. Pellentesque consequat ultricies interdum. Vivamus placerat ipsum et iaculis varius.
