--- a/offer.html
+++ b/offer.html
@@ -38,8 +38,18 @@
 		</nav>
 	</header>
 	<main>
-		<section id="offer">
-			<div class="blur"></div>
+		<section id="bio-info">
+			<div class="blur">
+				<div class="main-bio">
+					<h2>Damian Gałdyński</h2>
+					<p class="profession">Twój doradca finansowy</p>
+				</div>
+				<div class="scroll-button">
+					<a href="#information"><i class="fas fa-angle-double-down"></i>scroll</a>
+				</div>
+			</div>
+		</section>
+		<section id="information">
 			<div class="offer-content">
 				<h2>Oferta</h2>
 				<div class="offer-info">
