changes on subpage

--- a/about.html
+++ b/about.html
@@ -28,9 +28,11 @@
 						<ul class="navbar-menu-list">
 							<li><a href="about.html">O Nas</a></li>
 							<li><a href="offer.html">Oferta</a></li>
-							<li><a href="recommendations.html">Rekomendacje</a></li>
 							<li><a href="contact.html">Kontakt</a></li>
+		<!-- in the future
+							<li><a href="recommendations.html">Rekomendacje</a></li>
 							<li><a href="download.html">Do Pobrania</a></li>
+							 -->
 						</ul>
 					</div>
 				</div>
@@ -52,10 +54,12 @@
 		<section id="information">
 			<div class="about-content">
 					<h2>O nas</h2>
-					<p class="about-info">Financial Matter to przedsiębiorstwo o zasięgu ogólnopolskim, które specjalizuje się w zapewnieniu najkorzystniejszego oraz najbardziej komfortowego źródła finansowania.  Siedziba firmy mieści się w Poznaniu, natomiast pełna mobilność oraz dyspozycyjność pozwala nam dotrzeć w każdy zakątek kraju.
-					Firma współpracuje z rzeszą wiodących na polskim rynku instytucji finansowych, co pozwala na dużą wszechstronność, elastyczność oraz realne dopasowanie preferowanych rozwiązań do potrzeb klientów.
-					Przyjęty model działania oraz honorowane przez nas wartości stawiają odbiorców naszych usług na pierwszym miejscu. Każdy z Państwa może liczyć na indywidualne podejście, a także nasze pełne zaangażowanie w proces zaspokajania Państwa potrzeb oraz rozwiązywania problemów. Gramy w jednej drużynie!
+					<p class="about-info">
+					Financial Matter to przedsiębiorstwo o zasięgu ogólnopolskim, które specjalizuje się w zapewnieniu najkorzystniejszego oraz najbardziej komfortowego źródła finansowania.  
+					<br>
+					Siedziba firmy mieści się w Poznaniu, natomiast pełna mobilność oraz dyspozycyjność pozwala nam dotrzeć w każdy zakątek kraju. Firma współpracuje z rzeszą wiodących na polskim rynku instytucji finansowych, co pozwala na dużą wszechstronność, elastyczność oraz możność dopasowania rozwiązań finansowych do potrzeb oraz preferencji klientów. Przyjęty model działania oraz honorowane przez nas wartości, zawsze stawiają odbiorców naszych usług  na pierwszym miejscu. Bez względu na skalę oraz zakres współpracy, każdy z Państwa może liczyć na pełne zaangażowanie oraz indywidualne - ludzkie podejście. Gramy w jednej drużynie!
 					</p>
+					<p class="skill-list summary">Twoje potrzeby, to nasz priorytet</p>
 				</div>
 		</section>
 	</main>
