--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,11 @@
 						<ul class="navbar-menu-list">
 							<li><a href="about.html">O Nas</a></li>
 							<li><a href="offer.html">Oferta</a></li>
-							<li><a href="recommendations.html">Rekomendacje</a></li>
 							<li><a href="contact.html">Kontakt</a></li>
+		<!-- in the future
+							<li><a href="recommendations.html">Rekomendacje</a></li>
 							<li><a href="download.html">Do Pobrania</a></li>
+							 -->
 						</ul>
 					</div>
 				</div>
@@ -38,7 +40,28 @@
 		</nav>
 	</header>
 	<main>
-		
+		<section id="bio-info">
+			<div class="blur">
+				<div class="contact-info">
+					<h2>Kontakt</h2>
+					<p class="contact-paragraf">Twoje finanse mają dla nas znaczenie</p>
+				</div>
+			</div>
+		</section>
 	</main>
+	<footer>
+		<div class="footer-info">
+			<div class="social-icons">
+				<a href="https://www.facebook.com/pg/finematter2018/about/?ref=page_internal"><i class="fab fa-facebook fa-2x"></i></a>
+				<a href="https://www.facebook.com/finematter2018/"><i class="fab fa-facebook-messenger fa-2x"></i></a>
+			</div>
+			<div class="copyright">
+				<p>Damian Gałdyński: Twój doradca finansowy</p>
+				<p>© 2018 Company. All right reserved.</p>
+			</div>
+		</div>
+	</footer>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
