--- a/offer.html
+++ b/offer.html
@@ -28,9 +28,11 @@
 						<ul class="navbar-menu-list">
 							<li><a href="about.html">O Nas</a></li>
 							<li><a href="offer.html">Oferta</a></li>
-							<li><a href="recommendations.html">Rekomendacje</a></li>
 							<li><a href="contact.html">Kontakt</a></li>
+		<!-- in the future
+							<li><a href="recommendations.html">Rekomendacje</a></li>
 							<li><a href="download.html">Do Pobrania</a></li>
+							 -->
 						</ul>
 					</div>
 				</div>
@@ -56,13 +58,13 @@
 					<div class="offer-info-clients">
 						<p>Klient biznesowy</p>
 						<ul>
-							<li>kredyt firmowy ratalny na dowolny cel</li>
-							<li>kredyt inwestycyjny ratalny na cel określony</li>
-							<li>kredyt w rachunku bieżącym</li>
-							<li>limit w koncie</li>
+							<li>kredyt firmowy na dowolny cel</li>
+							<li>kredyt inwestycyjny</li>
+							<li>limit w rachunku bieżącym</li>
 							<li>leasing finansowy</li>
 							<li>leasing operacyjny</li>
-							<li>kredyt zabezpieczony</li>
+							<li>kredyt pod zabezpieczenie</li>
+							<li>promesy kredytowe</li>
 						</ul>
 					</div>
 					<div class="offer-info-clients">
@@ -70,13 +72,15 @@
 						<ul>
 							<li>kredyt konsumpcyjny na dowolny cel</li>
 							<li>kredyt samochodowy</li>
-							<li>limit w koncie</li>
+							<li>limit w rachunku bieżącym</li>
 							<li>leasing konsumencki</li>
 							<li>karta kredytowa</li>
-							<li>kredyt zabezpieczony</li>
+							<li>kredyt pod zabezpieczenie</li>
+							<li>pożyczki krótkoterminowe</li>
 						</ul>
 					</div>
 				</div>
+				<p class="skill-list summary">Twoje potrzeby, to nasz priorytet</p>
 			</div>
 		</section>
 	</main>
