--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
 						<ul class="navbar-menu-list">
 							<li><a href="about.html">O Nas</a></li>
 							<li><a href="offer.html">Oferta</a></li>
-							<li><a href="recommendations.html">Rekomendacje</a></li>
 							<li><a href="contact.html">Kontakt</a></li>
+		<!-- in the future
+							<li><a href="recommendations.html">Rekomendacje</a></li>
 							<li><a href="download.html">Do Pobrania</a></li>
+							 -->
 						</ul>
 					</div>
 				</div>
@@ -51,9 +53,11 @@
 		</section>
 		<section id="information">
 			<div class="skills">
+				<p class="skill-list name">Financial Matter</p>
 				<p class="skill-list">
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at tristique quam. Aliquam erat volutpat. Curabitur ipsum elit, finibus in tempus at, hendrerit ac turpis. Nullam tincidunt, sem vitae vehicula bibendum, lacus libero rhoncus dui, ut pellentesque ligula purus non nulla. Morbi posuereleo fringilla, efficitur arcu nec, rutrum tortor. In id malesuada ante. Pellentesque consequat ultricies interdum. Vivamus placerat ipsum et iaculis varius.
+					Młody, energiczny i optymistycznie nastawiony zespół tworzący firmę, oprócz szerokiego zakresu nieustannie poszerzanej wiedzy teoretycznej, dysponuje czymś, co stanowi fundament jego skuteczności. Fundamentem tym, jest ogromna wiedza praktyczna, zbudowana na podstawie wieloletniego doświadczenia w branży doradztwa finansowo-kredytowego i relacjom z setkami zadowolonych klientów. Wiedza teoretyczna, produktowa, a także ta najistotniejsza - praktyczna, pozwala nam być dla Państwa ekspertami, których potrzebujecie, którzy są w stanie przeskoczyć wszelkie przeszkody oraz pokonać utrudnienia na drodze do mety - mety, na której znajduje się realizacja Państwa potrzeb i oczekiwań.
 				</p>
+				<p class="skill-list summary">Twoje potrzeby, to nasz priorytet</p>
 			</div>
 		</section>
 	</main>
