changes on subpage and add contact content

--- a/contact.html
+++ b/contact.html
@@ -41,10 +41,28 @@
 	</header>
 	<main>
 		<section id="bio-info">
-			<div class="blur">
+			<div class="blur contact-background">
 				<div class="contact-info">
 					<h2>Kontakt</h2>
 					<p class="contact-paragraf">Twoje finanse mają dla nas znaczenie</p>
+					<div class="contact-details">
+						<ul>
+							<li>
+								<a href="mailto:kontakt@financialmatter.com.pl">
+									<i class="far fa-envelope fa-5x"></i>
+									<h4>E-mail</h4>
+									<p>kontakt@financialmatter.com.pl</p>
+								</a>
+							</li>
+							<li>
+								<a href="tel:+48724209634">
+									<i class="fas fa-mobile-alt fa-5x"></i>
+									<h4>Telefon</h4>
+									<p>724209634</p>
+								</a>
+							</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</section>
